welcome.lessons.welcome.methods.picture.PictureMono2.scala.error
PictureMono2:42: error: Unmatched closing brace '}' ignored here
}
^PictureMono2:45: error: eof expected but '}' found.
}
^